# smart_home_ros2_ws

./: .gitignore  .gitmodules  README.md  ws_build.sh
doc/: links.txt  mode_sequence_characteristics.txt  useful_development_links.txt
hub/: package.xml  setup.cfg  setup.py
hub/doc/: environment_setup.txt
hub/hub/: AudioHandler.py  GUI.py  Runner.py  SmartHomeHubController.py  SmartHomeHubNode.py  SmartHomeHubThread.py
smart_home_msgs/: CMakeLists.txt  package.xml
smart_home_msgs/msg/: CountdownState.msg  DeviceActivationChange.msg  Float32Arr.msg  ModeChange.msg  WaveParticipantLocation.msg  WaveUpdate.msg
src/hub/: setup.py
src/hub/hub/: Runner.py  SmartHomeHubNode.py
src/smart_home_msgs/: CMakeLists.txt
src/smart_home_msgs/msg/: CountdownState.msg  ModeChange.msg  ModeChangeRequest.msg  WaveUpdate.msg
uc_colcon/: package.xml  setup.cfg  setup.py
uc_colcon/doc/: environment_setup.txt
uc_colcon/sketches/TestCLI/: TestCLI.ino
uc_colcon/tools/: arduino_install.sh  install_then_build.sh
