<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
	<name>hub</name>
	<version>0.0.1</version>
	<description>The control center for my smart home.</description>

	<maintainer email="rnvandemark@gmail.com">Nick Vandemark</maintainer>
	<license>Do_Whatever_You_Want</license>

	<exec_depend>rclpy</exec_depend>
	<exec_depend>smart_home_msgs</exec_depend>

	<export>
		<build_type>ament_python</build_type>
	</export>
</package>
