<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
	<name>smart_home_msgs</name>
	<version>0.0.1</version>
	<description>The interfaces for the smart home.</description>

	<maintainer email="rnvandemark@gmail.com">Nick Vandemark</maintainer>
	<license>Do_Whatever_You_Want</license>

	<buildtool_depend>ament_cmake</buildtool_depend>
	
	<member_of_group>rosidl_interface_packages</member_of_group>

	<export>
		<build_type>ament_cmake</build_type>
	</export>
</package>
